--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pretty": "yarn prettier . --write",
+    "style": "yarn stylelint \"src/*.css\""
   },
   "dependencies": {
     "mobx": "^6.12.3",
@@ -30,6 +32,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "stylelint": "^16.5.0",
+    "stylelint-config-standard-scss": "^13.1.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.0"
